--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi
-uvicorn
-aiogram
-pandas
-sqlalchemy
-aiosqlite
-pydantic
-alembic
-pydantic_settings
-selenium
-webdriver_manager
+fastapi==0.115.12
+uvicorn==0.34.0
+aiogram==3.19.0
+pandas==2.2.3
+sqlalchemy==2.0.40
+aiosqlite==0.21.0
+pydantic==2.10.6
+alembic==1.15.2
+pydantic_settings==2.8.1
+selenium==4.30.0
+webdriver_manager==4.0.2
